
-- 101.0 --------------------------------------------------------

General:
 ! change default screenshot file type to jpg. to create png use /screenshot png
 ! pr-downloader dependency is now mandatory (statically linked with spring)
 ! demo files are now compressed with gzip

Lua:
 ! {Set,Get}UnitPieceCollisionVolumeData now receive 1-based piece index argument (was 0-based).
 ! GameID callin now gets the ID string encoded in hex.
 ! UnitDestroyed is now called twice and gets an extra argument 'preEvent'
   the value of preEvent is true for the first call which corresponds to
   old UnitDestroyed and false for the second (allows shaders during death
   anims, etc)
   also remove hardcoded logic to zombify (stun+immobilize) a unit on death
 ! gl.UnitShape and gl.FeatureShape now set their relevant GL state internally
   (so calling only these functions is enough to get correctly rendered models;
   pass in 'false' for the [new] third argument to get the fixed behavior, omit
   it or pass in 'true' [default] to render with your own custom state instead)
 - new Spring.GetUICommands function to obtain a list of all UI commands (e.g. /luaui reload)
 - new VFS.CalculateHash function that calculates hash (in base64 form) of a given string (with md5 support initially)
 - new Spring.SetFeatureFade(featureID, bool) to control whether a feature will fade or not when zoomed out.

 - add callouts (see their Unit equivalents for documentation)
     Spring.{Get,Set}FeaturePieceCollisionVolumeData
     Spring.GetFeatureLastAttackedPiece
     Spring.GetFeaturePieceMap
     Spring.GetFeaturePieceList
     Spring.GetFeaturePieceInfo
     Spring.GetFeaturePiecePosition
     Spring.GetFeaturePieceDirection
     Spring.GetFeaturePiecePosDir
     Spring.GetFeaturePieceMatrix

     Spring.SetFeatureNoDraw
     Spring.GetFeatureNoDraw

     gl.FeatureRaw
     gl.FeatureMultMatrix
     gl.FeaturePiece
     gl.FeaturePieceMatrix
     gl.FeaturePieceMultMatrix
