@@ -11,16 +11,13 @@
 #include "LuaFeatureDefs.h"
 
 #include "LuaInclude.h"
-
-#include "Sim/Misc/GlobalSynced.h"
 #include "LuaDefs.h"
 #include "LuaHandle.h"
 #include "LuaUtils.h"
-#include "Rendering/Models/3DModel.h"
-#include "Rendering/Models/IModelParser.h"
-#include "Sim/Features/Feature.h"
+#include "Sim/Features/FeatureDef.h"
 #include "Sim/Features/FeatureHandler.h"
 #include "Sim/Misc/CollisionVolume.h"
+#include "Sim/Misc/GlobalSynced.h"
 #include "System/Log/ILog.h"
 
 
@@ -40,7 +37,6 @@ static int FeatureDefNewIndex(lua_State* L);
 static int FeatureDefMetatable(lua_State* L);
 
 // special access functions
-static int DrawTypeString(lua_State* L, const void* data);
 static int CustomParamsTable(lua_State* L, const void* data);
 
 
@@ -272,165 +268,48 @@ static int Pairs(lua_State* L)
 /******************************************************************************/
 /******************************************************************************/
 
-static int DrawTypeString(lua_State* L, const void* data)
-{
-	const int drawType = *((const int*)data);
-	switch (drawType) {
-		case DRAWTYPE_MODEL: { HSTR_PUSH(L,   "model"); break; }
-		case DRAWTYPE_NONE:  { HSTR_PUSH(L,    "none"); break; }
-
-		default: {
-			if (drawType >= DRAWTYPE_TREE) {
-				HSTR_PUSH(L,    "tree");
-			} else {
-				HSTR_PUSH(L, "unknown");
-			}
-			break;
-		}
-	}
-	return 1;
-}
 
 
 static int CustomParamsTable(lua_State* L, const void* data)
 {
 	const map<string, string>& params = *((const map<string, string>*)data);
 	lua_newtable(L);
-	map<string, string>::const_iterator it;
-	for (it = params.begin(); it != params.end(); ++it) {
+
+	for (auto it = params.cbegin(); it != params.cend(); ++it) {
 		lua_pushsstring(L, it->first);
 		lua_pushsstring(L, it->second);
 		lua_rawset(L, -3);
 	}
+
 	return 1;
 }
 
 
-static int ModelHeight(lua_State* L, const void* data)
-{
-	const FeatureDef* fd = static_cast<const FeatureDef*>(data);
-	const S3DModel* model = NULL;
-	float height = 0.0f;
 
-	switch (fd->drawType) {
-		case DRAWTYPE_MODEL: {
-			model = fd->LoadModel();
-			height = model? model->height: 0.0f;
-			break;
-		}
-		case DRAWTYPE_NONE: {
-			height = 0.0f;
-			break;
-		}
-		default: {
-			if (fd->drawType >= DRAWTYPE_TREE) {
-				height = TREE_RADIUS * 2.0f;
-			} else {
-				height = 0.0f;
-			}
-			break;
-		}
-	}
-	lua_pushnumber(L, height);
-	return 1;
+static int ModelTable(lua_State* L, const void* data) {
+	return (LuaUtils::PushModelTable(L, static_cast<const SolidObjectDef*>(data)));
 }
 
-
-static int ModelRadius(lua_State* L, const void* data)
-{
-	const FeatureDef* fd = static_cast<const FeatureDef*>(data);
-	const S3DModel* model = NULL;
-	float radius = 0.0f;
-
-	switch (fd->drawType) {
-		case DRAWTYPE_MODEL: {
-			model = fd->LoadModel();
-			radius = model? model->radius: 0.0f;
-			break;
-		}
-		case DRAWTYPE_NONE: {
-			radius = 0.0f;
-			break;
-		}
-		default: {
-			if (fd->drawType >= DRAWTYPE_TREE) {
-				radius = TREE_RADIUS;
-			} else {
-				radius = 0.0f;
-			}
-			break;
-		}
-	}
-	lua_pushnumber(L, radius);
-	return 1;
+static int ModelName(lua_State* L, const void* data) {
+	return (LuaUtils::PushModelName(L, static_cast<const SolidObjectDef*>(data)));
 }
 
-
-static int ModelName(lua_State* L, const void* data)
-{
-	const FeatureDef* fd = static_cast<const FeatureDef*>(data);
-	lua_pushsstring(L, modelParser->FindModelPath(fd->modelName));
-	return 1;
+static int ModelHeight(lua_State* L, const void* data) {
+	return (LuaUtils::PushModelHeight(L, static_cast<const SolidObjectDef*>(data), false));
 }
 
+static int ModelRadius(lua_State* L, const void* data) {
+	return (LuaUtils::PushModelRadius(L, static_cast<const SolidObjectDef*>(data), false));
+}
+
+static int ModelDrawType(lua_State* L, const void* data) {
+	return (LuaUtils::PushFeatureModelDrawType(L, static_cast<const FeatureDef*>(data)));
+}
 
 static int ColVolTable(lua_State* L, const void* data) {
-	auto cv = static_cast<const CollisionVolume*>(data);
-	assert(cv != NULL);
-
-	lua_newtable(L);
-	switch (cv->GetVolumeType()) {
-		case CollisionVolume::COLVOL_TYPE_ELLIPSOID:
-			HSTR_PUSH_STRING(L, "type", "ellipsoid");
-			break;
-		case CollisionVolume::COLVOL_TYPE_CYLINDER:
-			HSTR_PUSH_STRING(L, "type", "cylinder");
-			break;
-		case CollisionVolume::COLVOL_TYPE_BOX:
-			HSTR_PUSH_STRING(L, "type", "box");
-			break;
-		case CollisionVolume::COLVOL_TYPE_SPHERE:
-			HSTR_PUSH_STRING(L, "type", "sphere");
-			break;
-	}
-
-	LuaPushNamedNumber(L, "scaleX", cv->GetScales().x);
-	LuaPushNamedNumber(L, "scaleY", cv->GetScales().y);
-	LuaPushNamedNumber(L, "scaleZ", cv->GetScales().z);
-	LuaPushNamedNumber(L, "offsetX", cv->GetOffsets().x);
-	LuaPushNamedNumber(L, "offsetY", cv->GetOffsets().y);
-	LuaPushNamedNumber(L, "offsetZ", cv->GetOffsets().z);
-	LuaPushNamedNumber(L, "boundingRadius", cv->GetBoundingRadius());
-	LuaPushNamedBool(L, "defaultToSphere",    cv->DefaultToSphere());
-	LuaPushNamedBool(L, "defaultToFootPrint", cv->DefaultToFootPrint());
-	LuaPushNamedBool(L, "defaultToPieceTree", cv->DefaultToPieceTree());
-	return 1;
+	return (LuaUtils::PushColVolTable(L, static_cast<const CollisionVolume*>(data)));
 }
 
-
-#define TYPE_MODEL_FUNC(name, param)                            \
-	static int Model ## name(lua_State* L, const void* data)    \
-	{                                                           \
-		const FeatureDef* fd = static_cast<const FeatureDef*>(data); \
-		if (fd->drawType == DRAWTYPE_MODEL) {                   \
-			const S3DModel* model = fd->LoadModel();            \
-			lua_pushnumber(L, model? model -> param : 0.0f);    \
-			return 1;                                           \
-		}                                                       \
-		return 0;                                               \
-	}
-
-//TYPE_MODEL_FUNC(Height, height); // ::ModelHeight()
-//TYPE_MODEL_FUNC(Radius, radius); // ::ModelRadius()
-TYPE_MODEL_FUNC(Minx, mins.x)
-TYPE_MODEL_FUNC(Midx, relMidPos.x)
-TYPE_MODEL_FUNC(Maxx, maxs.x)
-TYPE_MODEL_FUNC(Miny, mins.y)
-TYPE_MODEL_FUNC(Midy, relMidPos.y)
-TYPE_MODEL_FUNC(Maxy, maxs.y)
-TYPE_MODEL_FUNC(Minz, mins.z)
-TYPE_MODEL_FUNC(Midz, relMidPos.z)
-TYPE_MODEL_FUNC(Maxz, maxs.z)
 
 
 /******************************************************************************/
@@ -447,26 +326,15 @@ static bool InitParamMap()
 	const FeatureDef fd;
 	const char* start = ADDRESS(fd);
 
+	ADD_FUNCTION("model", fd, ModelTable);
 	ADD_FUNCTION("collisionVolume", fd.collisionVolume, ColVolTable);
 
-	ADD_FUNCTION("drawTypeString", fd.drawType,     DrawTypeString);
-
-	ADD_FUNCTION("customParams",   fd.customParams, CustomParamsTable);
-
-	// TODO: share the Model* functions between LuaUnitDefs and LuaFeatureDefs
-	// ADD_FUNCTION("model",   fd, ModelTable);
-	ADD_FUNCTION("height",    fd, ModelHeight);
-	ADD_FUNCTION("radius",    fd, ModelRadius);
-	ADD_FUNCTION("minx",      fd, ModelMinx);
-	ADD_FUNCTION("midx",      fd, ModelMidx);
-	ADD_FUNCTION("maxx",      fd, ModelMaxx);
-	ADD_FUNCTION("miny",      fd, ModelMiny);
-	ADD_FUNCTION("midy",      fd, ModelMidy);
-	ADD_FUNCTION("maxy",      fd, ModelMaxy);
-	ADD_FUNCTION("minz",      fd, ModelMinz);
-	ADD_FUNCTION("midz",      fd, ModelMidz);
-	ADD_FUNCTION("maxz",      fd, ModelMaxz);
 	ADD_FUNCTION("modelname", fd, ModelName);
+	ADD_FUNCTION("height", fd, ModelHeight);
+	ADD_FUNCTION("radius", fd, ModelRadius);
+	ADD_FUNCTION("drawTypeString", fd, ModelDrawType);
+
+	ADD_FUNCTION("customParams", fd.customParams, CustomParamsTable);
 
 	ADD_INT("id", fd.id);
 	ADD_INT("deathFeatureID", fd.deathFeatureDefID);
@@ -499,6 +367,15 @@ static bool InitParamMap()
 
 	ADD_INT("smokeTime",    fd.smokeTime);
 
+	ADD_DEPRECATED_LUADEF_KEY("minx");
+	ADD_DEPRECATED_LUADEF_KEY("miny");
+	ADD_DEPRECATED_LUADEF_KEY("minz");
+	ADD_DEPRECATED_LUADEF_KEY("midx");
+	ADD_DEPRECATED_LUADEF_KEY("midy");
+	ADD_DEPRECATED_LUADEF_KEY("midz");
+	ADD_DEPRECATED_LUADEF_KEY("maxx");
+	ADD_DEPRECATED_LUADEF_KEY("maxy");
+	ADD_DEPRECATED_LUADEF_KEY("maxz");
 	ADD_DEPRECATED_LUADEF_KEY("deathFeature");
 
 	return true;
